work on dropdown functionality for note/notebook CRUD

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,4 +27,5 @@
  @import './components/notebooks/notebook_index_item.scss';
  @import './components/notebooks/notebook_modal.scss';
  @import './components//sidebar/reduced_sidebar.scss';
- @import './components//sidebar/expanded_sidebar.scss'
+ @import './components//sidebar/expanded_sidebar.scss';
+ @import './components/notes/note_show.scss'
