--- a/app/assets/stylesheets/components/sidebar/expanded_sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar/expanded_sidebar.scss
@@ -1,116 +1,165 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&display=swap');
-$oxygen: 'Oxygen';
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&display=swap");
+$oxygen: "Oxygen";
 
 .sidenavbar {
-    font-family: $oxygen;
-    width: 240px;
-    background: #1a1a1a;
-    display: flex;
-    flex-direction: column;
-    color: #ccc;
-    height: 100%;
-    p {
+  font-family: $oxygen;
+  width: 240px;
+  background: #1a1a1a;
+  display: flex;
+  flex-direction: column;
+  color: #ccc;
+  height: 100%;
+  p {
+    cursor: pointer;
+  }
+
+  .sidenavbar-top {
+    flex: 1;
+    .sidenavbar-top-profile {
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      padding: 15px;
+      .sidenavbar-profile-icon {
+        width: 38px;
+        height: 38px;
+        margin-right: 10px;
+        border: 3px solid #1a1a1a;
+        color: darkgrey;
+        text-align: center;
+        text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+        font: 31px Arial, sans-serif;
+        border-radius: 50%;
+      }
+      .expanded-side-nav-action-dropdown {
+        .sienavbar-profile-title {
+          display: flex;
+          align-items: center;
+          flex: 1;
+        }
+        .sidenavbar-icon {
+          margin: 0 10px;
+          font-size: 12px;
+        }
+        .expanded-side-nav-action-dropdown-btn {
+          display: inline;
+          border: none;
+          box-shadow: none;
+          outline: none;
+          cursor: pointer;
+          color: #000;
+        }
+        .angledown-i {
+          color: #cccccc;
+          font-size: 14px;
+          font-weight: light;
+          margin-right: 30px;
+        }
+
+        .expanded-side-nav-action-dropdown-ul {
+          position: absolute;
+          display: hidden;
+          margin: 0;
+          padding: 0;
+          left: 60px;
+          top: 50px;
+          // background: #cccccc;
+          transform: rotateX(-90deg);
+          box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+          text-decoration: none;
+        }
+        .expanded-side-nav-action-dropdown-ul.active {
+          transform: rotateX(0deg);
+        }
+        .expanded-side-nav-action-dropdown-ul li {
+          border-radius: 4px;
+          list-style: none;
+          font-family: $oxygen;
+          font-size: 14px;
+          font-weight: bolder;
+          width: 100%;
+          display: block;
+          padding: 8px 30px;
+          text-align: center;
+          text-decoration: none;
+          background: #cccccc;
+          color: rgb(195, 93, 71);
+          cursor: pointer;
+          text-align: left;
+          &:hover {
+            background-color: #f8f8f8;
+          }
+        }
+      }
+    }
+
+    .sidenavbar-top-search {
+      padding: 15px;
+      .sidenavbar-search-icon {
+        font-size: 20px;
+      }
+      .search-block {
+        display: flex;
+        align-items: center;
+        background: #404040;
+        padding: 8px 10px;
+        border-radius: 50px;
+      }
+      input {
+        color: #fff;
+        margin-left: 10px;
+        background: none;
+        outline: none;
+        border: none;
+      }
+    }
+
+    .sidenavbar-top-create-note {
+      padding: 0 15px;
+      color: #fff;
+      .create-note-btn {
+        display: flex;
+        align-items: center;
+        background: rgb(195, 93, 71);
+        padding: 8px 10px;
+        border-radius: 50px;
         cursor: pointer;
+        .sidenavbar-plus-icon {
+          font-size: 12px;
+        }
+        .new-note {
+          margin-left: 10px;
+        }
+      }
     }
-    .sidenavbar-top {
-        flex: 1;
-        .sidenavbar-top-profile {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 15px;
-            .sidenavbar-profile-icon {
-                width: 38px;
-                height: 38px;
-                margin-right: 10px;
-                // padding-left: 2px;
-                // background: rgb(130, 190, 194);
-                border: 3px solid #1a1a1a;
-                color: darkgrey;
-                text-align: center;
-                text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-                font: 31px Arial, sans-serif;
-                border-radius: 50%;
-            }
-            .sienavbar-profile-title {
-                display: flex;
-                align-items: center;
-                flex: 1;
-            }
-            .sidenavbar-icon {
-                margin: 0 10px;
-                font-size: 12px
-            }
-        }
 
-        .sidenavbar-top-search {
-            padding: 15px;
-            .sidenavbar-search-icon{
-                font-size: 20px;
-            }
-            .search-block {
-                display: flex;
-                align-items: center;
-                background: #404040;
-                padding: 8px 10px;
-                border-radius: 50px;
-            }
-            input {
-                color: #fff;
-                margin-left: 10px;
-                background: none;
-                outline: none;
-                border: none;
-            }
+    .sidenavbar-top-menu-item {
+      margin-top: 10px;
+      ul {
+        li {
+          display: flex;
+          align-items: center;
+          padding: 10px 18px;
+          color: #ccc;
+          text-decoration: none;
+          .menu-btn-icon {
+            text-decoration: none;
+            font-size: 14px;
+            margin-right: 8px;
+          }
+          a {
+            color: #ccc;
+            text-decoration: none;
+          }
+          &:hover {
+            cursor: pointer;
+            background: #404040;
+          }
+          &.active {
+            background: #404040;
+          }
         }
-
-        .sidenavbar-top-create-note {
-            padding: 0 15px;
-            color: #fff;
-            .create-note-btn{
-                display: flex;
-                align-items: center;
-                background: rgb(195, 93, 71);
-                padding: 8px 10px;
-                border-radius: 50px;
-                cursor: pointer;
-                .sidenavbar-plus-icon{
-                    font-size: 12px;
-                }
-                .new-note{
-                    margin-left: 10px;
-                }
-            }
-        }
-
-
-        .sidenavbar-top-menu-item {
-            margin-top: 10px;
-            ul {
-                li {
-                    display: flex;
-                    align-items: center;
-                    padding: 10px 18px;
-                    color: #ccc;
-                    text-decoration: none;
-                    .menu-btn-icon {
-                        text-decoration: none;
-                        font-size: 14px;
-                        margin-right: 8px
-                    }
-                    a {
-                        color: #ccc;
-                        text-decoration: none;
-                    }
-                    &:hover {
-                        cursor: pointer;
-                        background: #404040
-                    }
-                    &.active {
-                        background: #404040
-                    }
-                }
-            }
-        }
+      }
     }
+  }
 }
