Add changes to note move functionality, update styling

--- a/app/assets/stylesheets/components/notebooks/notebook_show.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_show.scss
@@ -35,7 +35,7 @@ $oxygen: "Oxygen";
       width: 100%;
       flex: 1;
       h1 {
-        margin: 15px 0 20px;
+        margin: 0 0 20px;
         font-size: 20px;
       }
 
