--- a/app/assets/stylesheets/components/notebooks/notebook_modal.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_modal.scss
@@ -15,6 +15,25 @@ $oxygen: 'Oxygen';
     align-items: center;
     background-color: rgba(42, 51, 60, 0.4);
     // padding: 20px 25px 18px;
+
+    .move-note-modal-ul {
+        color: black;
+        font-family: $oxygen;
+        font-size: 18px; 
+        cursor: pointer;
+        li {
+            color: black;
+            padding: 10px;
+            margin: 5px;
+            background: #f8f8f8;
+            border-radius: 5px;
+              &:hover {
+            background-color: #737373;
+            color: white;
+              }
+        }      
+    }
+    
     
     .modal-contents {
         min-width: 450px;
@@ -35,6 +54,7 @@ $oxygen: 'Oxygen';
         display: flex;
         justify-content: space-between;
         margin-top: 10px;
+        color: black;
 
         .modal-close-span {
             color: #737373;
@@ -58,7 +78,7 @@ $oxygen: 'Oxygen';
     .modal-name-label {
         font-size: 12px;
         display: block;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
     }
     .modal-title-input {
         margin-top: 10px;
@@ -122,4 +142,156 @@ $oxygen: 'Oxygen';
     a {
         color: black
     }
+    
+    
 }
+
+//move note modal
+
+//edit modal
+.edit-modal {
+    outline-style: none;
+    z-index: 1;
+    position: absolute;
+    font-family: $oxygen;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(42, 51, 60, 0.4);
+    // padding: 20px 25px 18px;
+
+    .move-note-modal-ul {
+        color: black;
+        font-family: $oxygen;
+        font-size: 18px; 
+        cursor: pointer;
+        li {
+            color: black;
+            padding: 10px;
+            margin: 5px;
+            background: #f8f8f8;
+            border-radius: 5px;
+              &:hover {
+            background-color: #737373;
+            color: white;
+              }
+        }      
+    }
+    
+    
+    .modal-contents {
+        min-width: 450px;
+        max-width: 650px;
+        min-height: 200px;
+        background-color: white;
+        border-radius: 4px;
+        padding: 1rem 2rem;
+    };
+
+    .modal-create-header {
+        padding: 0px 25px 18px;
+    }
+    
+    .modal-create-title {
+        font-size: 18px;
+        font-weight: bold;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10px;
+        color: black;
+
+        .modal-close-span {
+            color: #737373;
+            cursor: pointer;
+            font-size: 16px
+            // margin: 1rem 2rem;
+    
+        }
+    };
+    .modal-close-span:hover {
+        color: black;
+    }
+    .modal-create-info {
+        // line-height: 20px;
+        padding-top: 25px;
+        font-size: 14px;
+    };
+    .modal-create-form {
+        padding: 0px 25px 0px 25px
+    }
+    .modal-name-label {
+        font-size: 12px;
+        display: block;
+        margin-bottom: 20px;
+    }
+    .modal-title-input {
+        margin-top: 10px;
+        font-size: 16px;
+        width: 95%;
+        padding: 10px 10px;
+    }
+    .modal-buttons {
+        border-top: 2px solid #d9d9d9;
+        padding: 20px 0px;
+        display: flex;
+        justify-content: flex-end;
+    };
+    .modal-cancel {
+        font-family: $oxygen;
+        cursor: pointer;
+        margin: 0 10px 0 0;
+        color: #737373;
+        padding: 10px 15px;
+        background: white;
+        border-width: 1px;
+        border-radius: 4px;
+        
+    };
+    .modal-cancel:hover {
+        background: white;
+        color: black;
+    };
+
+    .modal-submit {
+        font-family: $oxygen;
+        background: rgb(195, 93, 71);
+        vertical-align: middle;
+        display: inline-flex;
+        border-radius: 4px;
+        padding: 10px 20px;
+        border: none;
+        color: white
+    };
+    .modal-submit:hover {
+        background-color:rgb(130, 190, 194);
+    }
+     .error-ul {
+        text-align: left;
+        font-size: 12px;
+        display: inline-block;
+
+        // width: 300px;
+        color: red;
+     };
+}
+.modal-hidden {
+        display: none;
+}
+
+
+
+.delete-notebook-modal {
+    color: black;
+    text-decoration: none;
+    a {
+        color: black
+    }
+    
+    
+}
+
+//move note modal
