--- a/app/assets/stylesheets/components/session/information.scss
+++ b/app/assets/stylesheets/components/session/information.scss
@@ -4,7 +4,7 @@ $oxygen: 'Oxygen';
 .information-page {
     display: flex;
     align-items: center;
-    // margin-top: 30px;
+    margin-top: 30px;
     font-family: $oxygen;
     .infographic {
         width: 794px;
@@ -13,21 +13,21 @@ $oxygen: 'Oxygen';
         margin-left: 120px;
     }
     .information-list {
-        // display: flex;
-        // flex-direction: row;
-        // padding-top: ;
+        display: flex;
+        min-width: 240px;
+        flex-direction: column;
         font-size: 16px;
         // font-weight: ;
     }
-    // li {
-    //     font-weight: 300;
-    //     color: black;
-    //     position: relative;
-    //     left: -10px;
-    //     // padding-bottom: 20px;
-    //     padding-top: 30px;
+    li {
+        font-weight: 300;
+        color: black;
+        position: relative;
+        left: -10px;
+        // padding-bottom: 20px;
+        padding-top: 30px;
 
-    //     }
+        }
 }
 
 //refactor into separate divs
