--- a/app/assets/stylesheets/components/notes/note_show.scss
+++ b/app/assets/stylesheets/components/notes/note_show.scss
@@ -186,3 +186,35 @@ $oxygen: "Oxygen";
 //     background-color: #f1f1f1;
 //   }
 // }
+
+// empty note show
+
+.empty-note-show-wrapper {
+  font-family: $oxygen;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+  width: 103vh;
+  overflow: hidden;
+  background-color: rgb(248, 248, 248);
+  .empty-note-show{ 
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    h1 {
+      padding-bottom: 10px;
+    }
+    span {
+      font-weight: 800;
+      color: rgb(195, 93, 71);
+      cursor: pointer;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+  // position: relative;
+}
+
