--- a/app/assets/stylesheets/components/notebooks/notebook_modal.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_modal.scss
@@ -301,4 +301,14 @@ $oxygen: 'Oxygen';
     font-weight: bolder;
 }
 
+ 
+    .move-modal-create-title {
+        font-size: 18px;
+        font-weight: bold;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10px;
+        margin-left: 9px;
+        color: black;
+    }
 //move note modal
