--- a/app/assets/stylesheets/components/session/session_form.scss
+++ b/app/assets/stylesheets/components/session/session_form.scss
@@ -2,6 +2,9 @@
 $oxygen: 'Oxygen';
 // @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@100;300;500;700&display=swap');
 // $oswald: 'Oswald', sans serif;
+// $bg-img: url('public/images/infinote_background.png');
+
+
 
 .wrapper {
     position: absolute;
@@ -128,3 +131,11 @@ $oxygen: 'Oxygen';
     }
 }
 
+.session-form-wrapper {
+    .infinote-bg {
+        // transform: rotate(45deg);
+        height: 100%;
+        width: 100%;
+        opacity: 0.1;
+    }
+}
