--- a/app/assets/stylesheets/components/notebooks/notebook_show.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_show.scss
@@ -4,6 +4,7 @@ $oxygen: "Oxygen";
 .notebook-show {
   display: flex;
   align-items: center;
+  background: #f8f8f8;
   // justify-content: center;
   height: 100vh;
 }
