--- a/app/assets/stylesheets/components/notes/note_show.scss
+++ b/app/assets/stylesheets/components/notes/note_show.scss
@@ -131,6 +131,15 @@ $oxygen: "Oxygen";
         border: none;
         outline: none;
         width: 100%;
+        background: #f8f8f8
+      }
+      .note-body-head-input {
+        padding: 10px;
+        font-size: 30px;
+        border: none;
+        outline: none;
+        width: 100%;
+        background: #f8f8f8
       }
     }
     .note-body-content {
