--- a/app/assets/stylesheets/components/notes/note_show.scss
+++ b/app/assets/stylesheets/components/notes/note_show.scss
@@ -133,6 +133,7 @@ $oxygen: "Oxygen";
         width: 100%;
         background: #f8f8f8
       }
+    }
     .note-body-head {
       background-color: #f8f8f8;
       input {
