--- a/app/assets/stylesheets/components/notes/note_show.scss
+++ b/app/assets/stylesheets/components/notes/note_show.scss
@@ -123,7 +123,8 @@ $oxygen: "Oxygen";
     background-color: #f8f8f8;
     flex: 1;
     padding: 20px;
-    .alt-note-body-head {
+    
+    .nb-head {
       background-color: #f8f8f8;
       input {
         padding: 10px;
