--- a/app/assets/stylesheets/components/sidebar/reduced_sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar/reduced_sidebar.scss
@@ -1,101 +1,101 @@
-
 .sidebar {
-    height: 150vh;
-    // position: sticky;
+  height: 150vh;
+  // position: sticky;
+  display: flex;
+  max-width: 60px;
+  background: #1a1a1a;
+  flex-direction: column;
+  color: #ccc;
+  position: fixed;
+  float: left;
+  .sidebar-user {
+    height: 56px;
     display: flex;
-    max-width: 60px;
-    background: #1a1a1a;
+    cursor: pointer;
+    padding-left: 10px;
+    align-items: center;
+    .user-initial {
+      justify-content: center;
+      vertical-align: middle;
+      width: 38px;
+      height: 38px;
+      padding-left: 1px;
+      background: rgb(130, 190, 194);
+      border: 3px solid #1a1a1a;
+      color: darkgrey;
+      text-align: center;
+      text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+      font: 31px Arial, sans-serif;
+      border-radius: 50%;
+    }
+  }
+  .buttons-1 {
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    .sidebar-search {
+      cursor: pointer;
+      width: 38px;
+      height: 38px;
+      padding-left: 4px;
+      padding-top: 5px;
+      border: 3px solid #1a1a1a;
+      background: #404040;
+      color: darkgrey;
+      text-align: center;
+      text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+      font: 20px Arial, sans-serif;
+      border-radius: 50%;
+      background: #1a1a1a;
+      color: #1a1a1a;
+    }
+    .sidebar-new {
+      cursor: pointer;
+      width: 38px;
+      height: 38px;
+      border: 3px solid #1a1a1a;
+      background: rgb(195, 93, 71);
+      color: darkgrey;
+      text-align: center;
+      text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+      font: 30px Arial, sans-serif;
+      border-radius: 50%;
+      margin-top: 5px;
+    }
+  }
+  .buttons-2 {
+    display: flex;
     flex-direction: column;
+    // flex: 1;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-evenly;
+    // align-items:flex-start;
+    vertical-align: middle;
+    // padding: 4px 11px 4px 11px;
+    // background: transparent;
+    // border: none;
+    cursor: pointer;
+    // overflow: hidden;
+    text-decoration: none;
     color: #ccc;
-    position: fixed;
-    float: left;
-    .sidebar-user {
-        height: 56px;
-        display: flex;
-        cursor: pointer;
-        padding-left: 10px;
-        align-items: center;
-        .user-initial {
-            justify-content: center;
-            vertical-align: middle;
-            width: 38px;
-            height: 38px;
-            padding-left: 1px;
-            background: rgb(130, 190, 194);
-            border: 3px solid #1a1a1a;
-            color: darkgrey;
-            text-align: center;
-            text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-            font: 31px Arial, sans-serif;
-            border-radius: 50%;
-        }
+    border-bottom-style: none;
+    // width: 100%;
+    li {
+      // background-color: white;
+      color: white;
+      text-decoration: none;
+      padding-bottom: 10px;
+      padding-top: 10px;
+      padding-left: 20px;
     }
-    .buttons-1 {
-        margin-left: 10px;
-        margin-bottom: 10px;
-        padding-top: 10px;
-        .sidebar-search {  
-            cursor: pointer;
-            width: 38px;
-            height: 38px;
-            padding-left: 4px;
-            padding-top: 5px;
-            border: 3px solid #1a1a1a;
-            background: #404040;
-            color: darkgrey;
-            text-align: center;
-            text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-            font: 20px Arial, sans-serif;
-            border-radius: 50%;
-        }
-        .sidebar-new {
-            cursor: pointer;
-            width: 38px;
-            height: 38px;
-            border: 3px solid #1a1a1a;
-            background: rgb(195, 93, 71);
-            color: darkgrey;
-            text-align: center;
-            text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-            font: 30px Arial, sans-serif;
-            border-radius: 50%;
-            margin-top: 5px;
-            
-        }
+    li:hover {
+      background-color: grey;
     }
-    .buttons-2 {
-        display: flex;
-        flex-direction: column;
-        // flex: 1;
-        // display: flex;
-        // flex-direction: column;
-        // justify-content: space-evenly;
-        // align-items:flex-start;
-        vertical-align: middle;
-        // padding: 4px 11px 4px 11px;
-        // background: transparent;
-        // border: none;
-        cursor: pointer;
-        // overflow: hidden;  
-        text-decoration: none;
-        color: #ccc;
-        border-bottom-style: none;
-        // width: 100%;
-        li {
-            // background-color: white;
-             color: white;
-            text-decoration: none;
-            padding-bottom: 10px;
-            padding-top:10px;
-            padding-left: 20px;
-        }
-        li:hover {
-            background-color: grey;
-        }
-        a {
-            text-decoration: none;
-            color: white;
-        }
-
+    a {
+      text-decoration: none;
+      color: white;
     }
+  }
 }
