begin rte functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <meta property="og:title" content="infiNote"/>
+  <meta property="og:image" content="<%= image_url("notes_pic.png") %>"/>
+  <meta property="og:description" content="A clone of the popular note-taking application 'Evernote', infiNote allows users to create, render, update and delete notes, notebooks and tags. Users may add notes to notebooks or tag them for better organization.
+
+  Built using React, Redux and Ruby on Rails."/>
+  <meta property="og:url"
+  content="https://infinote-app.herokuapp.com/#/">
+  
     <title>Infinote</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
