--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,4 +28,5 @@
  @import './components/notebooks/notebook_modal.scss';
  @import './components//sidebar/reduced_sidebar.scss';
  @import './components//sidebar/expanded_sidebar.scss';
- @import './components/notes/note_show.scss'
+ @import './components/notes/note_show.scss';
+ @import './components//notes/quill.scss'
