--- a/app/assets/stylesheets/components/notebooks/notebook_show.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_show.scss
@@ -81,6 +81,7 @@ $oxygen: "Oxygen";
           text-overflow: ellipsis;
         }
         .note-card-desc {
+          height: 50px;
           padding-bottom: 10px;
           width: 100%;
           color: #737373;
