--- a/app/assets/stylesheets/components/notes/quill.scss
+++ b/app/assets/stylesheets/components/notes/quill.scss
@@ -4,6 +4,13 @@
  * Copyright (c) 2014, Jason Chen
  * Copyright (c) 2013, salesforce.com
  */
+
+ strong {
+   font-weight: bold;
+ }
+ em {
+   font-style: italic;
+ }
 .ql-container {
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
