--- a/app/assets/stylesheets/components/tags/tags.scss
+++ b/app/assets/stylesheets/components/tags/tags.scss
@@ -1,4 +1,110 @@
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&display=swap");
+$oxygen: "Oxygen";
+
 .tags-index {
-    display: flex;
-    padding-left: 100px;
+  font-family: $oxygen;
+  display: flex;
+  padding-left: 60px;
+  flex-direction: column;
+  height: 100vh;
+  left: 100%;
+  top: 0;
+  // position: absolute;
+  padding: 24px 0 0 60px;
+  width: 380px;
+  background: #fff;
+  box-shadow: 0 0 0 1px rgba(99, 114, 130, 0.16),
+    0 4px 12px rgba(27, 39, 51, 0.08);
+  text-align: left;
+  font-size: 14px;
+  font-family: $oxygen;
+  color: #666;
+  outline: none;
+
+  .tags-header-container {
+    padding: 0 24px;
+    .tags-header {
+      display: flex;
+      width: 100%;
+      min-height: 40px;
+      align-items: center;
+      margin-left: auto;
+      font-size: 15px;
+      border-bottom: 2px solid #666;
+      .tags-title {
+        font-weight: bold;
+        color: #333;
+        flex: 1;
+        font-size: 20px;
+        padding-right: 12px;
+        .create-tag-btn {
+          padding: 0;
+          color: #666;
+        }
+      }
+    }
+    .tags-search-bar-div {
+      display: flex;
+      align-items: center;
+      border: 1px solid #ccc;
+      color: #262626;
+      height: 40px;
+      margin-top: 16px;
+      .tags-search-bar {
+        display: inline-block;
+        flex-grow: 1;
+        font-size: 14px;
+        border: 1px solid #fff;
+        padding: 5px 5px 5px 10px;
+        outline: none;
+      }
+      .tags-search-bar-icon {
+        color: #666;
+        display: inline-text;
+        height: 16px;
+        width: 16px;
+        margin-right: 7px;
+      }
+    }
+  }
+  .tags-body-wrapper {
+    position: relative;
+    padding: 0 8px 0 24px;
+    display: block;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    outline: none;
+    .tags-body {
+      overflow: visible;
+      width: 0px;
+      outline-style: none;
+      height: auto;
+      position: relative;
+      width: 348px;
+      margin: 16px 0 3px;
+      height: 198px;
+      .tag-list-element {
+        height: 46px;
+        left: 0px;
+        top: 50px;
+        width: 100%;
+        .tag-list-info {
+          display: inline-flex;
+          align-items: center;
+          font-size: 13px;
+          color: #333;
+          padding-left: 12px;
+          max-width: 338px;
+          cursor: pointer;
+          &:hover {
+            text-decoration: underline;
+          }
+          .tag-list-dropdown {
+            color: pink;
+          }
+        }
+      }
+    }
+  }
 }
