create dropdown functionality for delete tags

--- a/app/assets/stylesheets/components/modals/modal.scss
+++ b/app/assets/stylesheets/components/modals/modal.scss
@@ -60,6 +60,7 @@ $oxygen: "Oxygen";
       margin-bottom: 8px;
     }
     .tag-modal-input {
+      border: 1px solid #ccc;
       width: 450px;
       padding: 0 10px;
       position: relative;
