--- a/app/assets/stylesheets/components/sidebar/expanded_sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar/expanded_sidebar.scss
@@ -25,7 +25,7 @@ $oxygen: "Oxygen";
         // padding-left: 1px;
         background: rgb(130, 190, 194);
         border: 3px solid #1a1a1a;
-        color: darkgrey;
+        color: #fff;
         text-align: center;
         text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
         font: 31px Arial, sans-serif;
@@ -209,7 +209,9 @@ $oxygen: "Oxygen";
 //       align-items: flex-end;
 //       justify-content: center;
 //       padding: 15px;
-//       .user-initial {
+      .user-initial {
+        color: #fff
+      }
 //         width: 30px;
 //         height: 30px;
 //         border-radius: 50%;
