--- a/app/assets/stylesheets/components/sidebar/reduced_sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar/reduced_sidebar.scss
@@ -22,7 +22,7 @@
       padding-left: 1px;
       background: rgb(130, 190, 194);
       border: 3px solid #1a1a1a;
-      color: darkgrey;
+      color: #fff;
       text-align: center;
       text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
       font: 31px Arial, sans-serif;
@@ -56,7 +56,7 @@
       height: 38px;
       border: 3px solid #1a1a1a;
       background: rgb(195, 93, 71);
-      color: darkgrey;
+      color: #fff;
       text-align: center;
       text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
       font: 30px Arial, sans-serif;
